# AceCmakeBase

./: .coveralls.yml  .travis.yml  CMakeLists.txt  README.md  makecov
src/: CMakeLists.txt  main.cpp
src/sample/: CMakeLists.txt  sample.cpp  sample.h
test/: CMakeLists.txt  TEST_complicated.c  TEST_sample.cpp
